After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787492 - retro-gtk: SIGABRT in retro_game_info_free
retro-gtk: SIGABRT in retro_game_info_free
Status: RESOLVED FIXED
Product: gnome-games
Classification: Core
Component: retro-gtk
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Games maintainers
: 787471 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2017-09-10 05:54 UTC by Adrien Plazas
Modified: 2017-09-10 09:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
game-info: Remove some free (1.02 KB, patch)
2017-09-10 06:27 UTC, Adrien Plazas
committed Details | Review

Description Adrien Plazas 2017-09-10 05:54:14 UTC
Thread 1 "gnome-games" received signal SIGABRT, Aborted.
0x0000003cd003304f in raise () from /lib/libc.so.6
(gdb) bt
  • #0 raise
    from /lib/libc.so.6
  • #1 abort
    from /lib/libc.so.6
  • #2 ??
    from /lib/libc.so.6
  • #3 ??
    from /lib/libc.so.6
  • #4 ??
    from /lib/libc.so.6
  • #5 retro_game_info_free
    at retro-game-info.c line 58
  • #6 retro_core_load_discs
    at retro-core.c line 449
  • #7 retro_core_load_medias
    at retro-core.c line 603
  • #8 retro_core_init
    at retro-core.c line 730
  • #9 games_retro_runner_prepare_core
    at retro/retro-runner.c line 1108

Comment 1 Adrien Plazas 2017-09-10 06:27:21 UTC
Created attachment 359455 [details] [review]
game-info: Remove some free

This avoids uselessly trying to free an already freed RetroGameInfo.
Comment 2 Adrien Plazas 2017-09-10 06:28:20 UTC
Attachment 359455 [details] pushed as 84db6cb - game-info: Remove some free
Comment 3 Adrien Plazas 2017-09-10 09:32:12 UTC
*** Bug 787471 has been marked as a duplicate of this bug. ***