game-info: Remove some free

This avoids uselessly trying to free an already freed RetroGameInfo.

https://bugzilla.gnome.org/show_bug.cgi?id=787492